# DDC

./: .gitignore  .gitmodules  CHANGES_SINCE_TEACHER.txt  CMakeLists.txt  README.md  aggregate_results.py  build.sh  generate_excel.py  index.txt  run_combit.py  run_croaring_btv.py  run_ddc.py  run_storage_pass.sh
build_notest/: CMakeCache.txt  Makefile  benchmark_app  cmake_install.cmake
build_notest/src/core/bitset/: Makefile  cmake_install.cmake
build_notest/src/core/combit/: Makefile  cmake_install.cmake
debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  all_backend_tests[1]_include.cmake  bm_file_tests[1]_include.cmake  cmake_install.cmake  combit_backend_tests[1]_include.cmake  combit_demo  combit_tests[1]_include.cmake
debug/src/core/bitset/: Makefile  cmake_install.cmake
debug/src/core/combit/: Makefile  cmake_install.cmake  combit_eval  combit_eval_debug
include/combit/: bitmap_index.hpp
src/: main.cpp
src/benchmark/: bench_L_ops.cpp  bench_L_run_bar.cpp  bench_L_sizes.cpp  bench_bypass.cpp  bench_seg.cpp  benchmark_main.cpp  bitmap_backend.h  compress_tpch_q1.cpp  compress_tpch_q6.cpp  tpch_q6_benchmark.cpp  transition_bench.cpp  uti.cpp  uti.h
src/benchmark/backends/Concise/: concise_backend.cpp  concise_backend.h
src/benchmark/backends/bitset/: bitset_backend.cpp  bitset_backend.h
src/benchmark/backends/bitset_avx512/: bitset_avx512_backend.cpp  bitset_avx512_backend.h
src/benchmark/backends/combit/: combit_backend.cpp  combit_backend.h
src/benchmark/backends/croaring/: croaring_backend.cpp  croaring_backend.h
src/benchmark/backends/ddc/: ddc_backend.cpp  ddc_backend.h
src/benchmark/backends/ewah/: ewah_backend.cpp  ewah_backend.h
src/benchmark/backends/wah/: wah_backend.cpp  wah_backend.h
src/combit/: CMakeLists.txt
src/combit/include/combit/: bitmap_vector.hpp  combit_decoder.hpp  combit_encoder.hpp  types.hpp
src/combit/src/: bitmap_vector.cpp  combit_decoder.cpp  combit_encoder.cpp  types.cpp
src/core/: ddc.tgz
src/core/Concise/: concise.h
src/core/DDC_backup/: CMakeLists.txt
src/core/DDC_backup/include/: bitmap_vector.hpp  ddc_decoder.hpp  simd_util.hpp  types.hpp
src/core/DDC_backup/src/: bitmap_vector.cpp  ddc_decoder.cpp
src/core/bitset/: CMakeLists.txt
src/core/bitset/include/: bitset_simd.hpp  bitset_vector.hpp  segmented_bitset.hpp
src/core/bitset/src/: bitset_vector.cpp  segmented_bitset.cpp
src/core/combit/: CMakeLists.txt  README.md  build.sh  main.cpp
src/core/combit/include/: bitmap_index.hpp  bitmap_vector.hpp  combit.h  combit_decoder.hpp  combit_encoder.hpp  combit_util.h
src/core/combit/src/: and.cpp  bitmap_vector.cpp  combit.cpp  combit_decoder.cpp  combit_encoder.cpp  combit_eval.cpp  or.cpp  xor.cpp
src/core/combit_backup/include/: bitmap_vector.hpp  simd_util.hpp
src/core/combit_backup/src/: types.cpp
src/core/croaring/: roaring.c
src/core/ddc/: .gitignore  CMakeLists.txt  README.md
src/core/ddc/include/: ddc.h  ddc_n.h  ddc_util.h
src/core/ddc/src/: and.cpp  ddc.cpp  ddc_eval.cpp  ddc_n.cpp  not.cpp  or.cpp  xor.cpp
src/core/ddc_backend/include/: bitmap_index.hpp  ddc_encoder.hpp
src/core/ddc_backend/src/: ddc_encoder.cpp  types.cpp
src/core/fastbit/: bitvector.cpp  bitvector.h  bitvector16.h  bitvector8.cpp  bitvector8.h  bitvector_base.h  util.h
src/core/utils/: get_cpu_ghz.sh
src/croaring/: roaring.h  roaring.hh
src/fastbit/: bitvector16.cpp
src/utils/: util.cpp  util.h
test_bitmaps/: alternating.bm  dense_90pct.bm  metadata.txt  single_bit_500.bm  sparse_1pct.bm
test_bitmaps/column/: 1.bm  2.bm  3.bm  4.bm  5.bm
tests/: test_all_backends.cpp  test_backend_ops.cpp  test_bitmap_index.cpp  test_bitmap_vector.cpp  test_bm_files.cpp  test_combit.cpp  test_combit_decoder.cpp  test_combit_encoder.cpp  test_compression.cpp
tools/: bench_seg.csv.before_v3api  bench_seg.csv.before_v4  bench_seg.csv.packed_backup  build_bench_L_xlsx.py  hierarchy_depth_runlength_bar.gnuplot  hierarchy_depth_size.gnuplot  hierarchy_depth_size_c10_d10pct.gp  hierarchy_depth_size_c2000_d0p05pct.gp  hierarchy_depth_throughput.dat.bak_align  hierarchy_depth_throughput.gnuplot  hierarchy_depth_throughput_bar.dat.bak_align  hierarchy_depth_throughput_bar.gnuplot  make_transition_excel.py  motivation.py  motivation_compress.py  plot_4pdf.py  plot_and_cliff.py  plot_and_density.py  plot_bypass.py  plot_density111.py  plot_design_space.py  plot_hierarchy_depth_size.py  plot_or_density.gp  plot_or_density.py  plot_results.csv.5_22_backup  plot_results.csv.bak_revar  plot_results.csv.mixed_current  plot_s3_density.py  run_comp_sweep.sh  run_not_sweep.sh  update_results_report.py  update_storage_breakdown.py
util/: combit_only_compress.cpp  compress_any.cpp  compress_q3_join.py  compress_tpch_q3.sh  compress_tpch_q5.sh  ddc_only_compress.cpp  del_bitmap.sh  ewah_only_compress.cpp  export_tpch_q1.py  export_tpch_q12_sf10.py  export_tpch_q14_sf10.py  export_tpch_q17_sf10.py  export_tpch_q19_sf10.py  export_tpch_q3.py  export_tpch_q3_sf10.py  export_tpch_q4_sf10.py  export_tpch_q5.py  export_tpch_q6.py  export_tpch_q8_sf10.py  gen_bitmap.cpp  gen_bitmap.h  gen_bitmap.sh  gen_bitset.sh  gen_bm.cpp  gen_bm.h  gen_check.cpp  gen_dataset.sh  gen_test_bitmaps.sh  index.txt  inspect_croaring.cpp  setup_tpch_q15_sf10.sh  verify_bitmap.cpp  verify_bmz.py
util/bitmap_n10_c5_z1/: done.txt
